Add new article

--- a/blog.html
+++ b/blog.html
@@ -28,7 +28,19 @@
                 <p>Welcome to my blog! Here I share my thoughts and experiences about web development, technology, and more.
                 </p>
             </section>
-
+            <article>
+                <p>
+                    Many in the tech sphere self-identify as libertarians, or pro-capitalism. I want to make an argument on why capitalism is not the optime system 
+                    to benefit us as a species, without falling into the typical socialists points. First off, the only motive, or "loss-function" of capitalism is pure
+                    profit. I don't think many of us have meditate long enough on this point. The problem with profit is that is something that benefits from mass utility,
+                    that is, it is a form of democracy, which many techbros are growing to be skeptic of. Thus you get a system where things are produced to cater to the vast
+                    masses, with no regards to any qualitative properties, only quantitative. You can see the effects in how everything looks the same now, wether in UX design,
+                    consumer electronics, cars, fashion, etc, all products converge to the same, consumers get anonimazed into a grey blob. 
+                    So what's the alternative? We can see the roots of it are beginning to sprout. Status is starting to be no longer about who has the new shiny and expensive thing but
+                    about exclusivity and originality. People are gatekeeping niche brands, modding old iPods and posting your political opinions gets more engagement than your vacations 
+                    in Bali. Companies that sacrifice cold profit in exchange of making something product of love and passion will be more longeve. 
+                </p>
+            </article>
             <article>
                 <h3>Thoughts on post-scarcity</h3>
                 <p><em>Posted on January 15, 2023</em></p>
